# fuzzy4

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fuzzy4/: __init__.py  core.py
tests/: test_fuzzy4.py
