[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuzzy4"
version = "0.1.0"
description = "4-valued fuzzy logic library based on Belnap logic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mihail Gribov" }
]
keywords = [
    "fuzzy-logic",
    "belnap-logic",
    "four-valued-logic",
    "paraconsistent-logic",
    "uncertainty",
    "knowledge-representation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mihail-gribov/fuzzy4"
Repository = "https://github.com/mihail-gribov/fuzzy4"
Documentation = "https://github.com/mihail-gribov/fuzzy4#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/fuzzy4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/fuzzy4"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
